tests/ui-nightly/diagnostic-not-implemented-known-layout.stderr
error[E0277]: the trait bound `NotZerocopy: KnownLayout` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-known-layout.rs:16:26
   |
16 |     takes_known_layout::<NotZerocopy>();
   |                          ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `KnownLayout` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(KnownLayout)]` to `NotZerocopy`
   = help: the following other types implement trait `KnownLayout`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             AtomicBool
             AtomicI16
           and $N others
note: required by a bound in `takes_known_layout`
  --> tests/ui-nightly/diagnostic-not-implemented-known-layout.rs:19:26
   |
19 | fn takes_known_layout<T: KnownLayout>() {}
   |                          ^^^^^^^^^^^ required by this bound in `takes_known_layout`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-cd1d5a4f32b1f147.long-type-11091914204938981348.txt'
   = note: consider using `--verbose` to print the full type name to the console
